<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".fragments.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="@dimen/to_doo_signup_text_size"
            android:textStyle="bold"
            android:text="@string/sign_up_string"
            android:fontFamily="casual"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/input_email_card"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="@dimen/zero_dp"
                android:textColor="@color/primary"
                app:boxStrokeWidthFocused="@dimen/zero_dp"
                app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="casual"
                    android:textColorHint="@color/primary"
                    android:textColor="@color/primary"
                    android:hint="@string/input_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="@dimen/zero_dp"
                    android:paddingTop="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/input_password_card"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/input_email_card"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="@dimen/zero_dp"
                android:textColor="@color/primary"
                app:boxStrokeWidthFocused="@dimen/zero_dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary"
                app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="casual"
                    android:textColorHint="@color/primary"
                    android:hint="@string/input_password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="@dimen/zero_dp"
                    android:paddingTop="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/input_retype_password_card"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/input_password_card"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_retype_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="@dimen/zero_dp"
                android:textColor="@color/primary"
                app:boxStrokeWidthFocused="@dimen/zero_dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary"
                app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_retype_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="casual"
                    android:textColorHint="@color/primary"
                    android:hint="@string/input_retype_password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="@dimen/zero_dp"
                    android:paddingTop="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/input_retype_password_card"
            app:layout_constraintTop_toBottomOf="@id/input_retype_password_card"
            app:tint="@color/primary"
            app:layout_constraintWidth="50dp"
            android:contentDescription="@string/submit_button_string"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@mipmap/submit_button_foreground"/>

    <TextView
            android:id="@+id/already_registered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/already_registered_string"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/input_retype_password_card"
            app:layout_constraintTop_toBottomOf="@id/input_retype_password_card"/>

    <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/sign_in_string"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toEndOf="@id/already_registered_text"
            app:layout_constraintTop_toTopOf="@id/already_registered_text"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_marginTop="-70dp"
            android:indeterminateTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_retype_password_card"/>


</androidx.constraintlayout.widget.ConstraintLayout>