<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="400dp"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".fragments.AddToDooPopUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/todoClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:src="@mipmap/close_button_foreground"
                app:tint="@color/primary"
                android:contentDescription="@string/close_button_string"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="@+id/cardView1"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoClose">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/todoEt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/primary"
                        android:fontFamily="casual"
                        android:hint="@string/type_your_to_doo_string"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="12dp"
                        android:paddingEnd="@dimen/zero_dp"
                        android:paddingTop="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
                android:id="@+id/todoNextButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/submit_button_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView1"
                app:layout_constraintEnd_toEndOf="@+id/cardView1"
                android:layout_marginTop="12dp"
                app:tint="@color/primary"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/to_doo_string"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>